--- a/apps/landing-page/src/pages/index.astro
+++ b/apps/landing-page/src/pages/index.astro
@@ -1,15 +1,8 @@
 ---
-import HomePage from 'src/components/home/HomePage.vue';
+import HomePage from '../components/home/HomePage.vue';
 import MainLayout from '../layouts/MainLayout.astro';
-const testimonialsData = await fetch(`${import.meta.env.API_PATH}/api/testimonials`, {
-	method: 'GET',
-	headers: new Headers({
-		'Authorization': 'bearer '+ import.meta.env.STRAPI_TOKEN,
-		'Content-Type': 'application/x-www-form-urlencoded'
-	}),
-}).then((response) => response.json());
 ---
 
-<MainLayout client:visible>
-	<HomePage client:visible testimonial={testimonialsData} />
+<MainLayout>
+	<HomePage client:visible />
 </MainLayout>
